Issue #11: Added Session Info page. Made the Completed Run page only visible on mobil again. Updated the styling of the Start Run page. Update the title of each page to include 'tr@ceroute'.

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -6,6 +6,7 @@
   --color-pickled-bluewood: #364156;
   --color-rosy-finch: #7d4e57;
   --color-orange-salmon: #d66853;
+  --color-light-orange-salmon: #da7764;
   --color-off-white: #f4f3ef;
   --color-lightgray: #dcdbd7;
   --color-white: #f4f3ef;
@@ -13,7 +14,6 @@
 }
 
 body {
-  /* background-color: var(--color-ebony-clay); */
   background: linear-gradient(
     135deg,
     var(--color-cinder),
@@ -26,7 +26,6 @@ body {
   min-height: 100vh;
   margin: 0;
   font-family: 'Inter', sans-serif;
-  /* color: var(--color-off-white); */
 }
 
 /* An animation/keyframing for changing the gradient on the main background. */
@@ -41,60 +40,3 @@ body {
     background-position: 0% 50%;
   }
 }
-
-/* button {
-  padding: 1em 1em;
-  margin: 0.9em;
-  border: none;
-  border-radius: 5px;
-  letter-spacing: 3px;
-  text-transform: lowercase;
-  cursor: pointer;
-  color: rgb(169, 141, 252);
-  background-color: hsla(310, 100%, 37%, 0.2);
-  transition: all 1000ms;
-  font-size: 11px;
-  position: relative;
-  overflow: hidden;
-}
-
-button:hover {
-  transform: scale(1.1);
-  outline: 2px solid hsla(310, 100%, 37%, 0.2);
-  box-shadow: 4px 5px 17px -4px rgb(169, 141, 252);
-  -webkit-animation: glow 0.5s ease-in-out infinite alternate;
-  -moz-animation: glow 0.5s ease-in-out infinite alternate;
-  animation: glow 0.5s ease-in-out infinite alternate;
-}
-
-.glow {
-  color: rgb(169, 141, 252);
-  text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glow {
-  from {
-    text-shadow:
-      0 0 10px #fff,
-      0 0 20px #fff,
-      0 0 30px #e60073,
-      0 0 40px #e60073,
-      0 0 50px #e60073,
-      0 0 60px #e60073,
-      0 0 70px #e60073;
-  }
-
-  to {
-    text-shadow:
-      0 0 20px #fff,
-      0 0 30px #ff4da6,
-      0 0 40px #ff4da6,
-      0 0 50px #ff4da6,
-      0 0 60px #ff4da6,
-      0 0 70px #ff4da6,
-      0 0 80px #ff4da6;
-  }
-} */
